--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
             daviess@uw.edu
         </a>
         <br>
-        <strong>Office: PDL C-404 </strong>
+        <strong>Offices: PDL C-404 & CSE2 351</strong>
     </address>
 </div>
 
