--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ the University of Illinois at Chicago</a>.
 </section>
 
 
-<h3 style="color:Indigo;">Personal, but work welated</h3>
+<h3 style="color:Indigo;">Personal, but work related</h3>
 <section id="personal">
     {% for post in site.posts %} {% if post.personal == true %}
     <div class="news-item">
