--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Department of Mathematics
 </a> and
 the
 <a href="http://theory.cs.washington.edu"> theory group</a>
- in the Allen School. I'm fortunate to be advised by
+ in the Allen School. I'm advised by
 <a href = "https://sites.math.washington.edu/~rothvoss/index.html"> Thomas Rothvoss</a>.
 
 <br>
