--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <div class="row align-items-center mt-3 mb-4 ">
     <div class="col-md">
-        <img class="img-fluid d-block mx-auto" alt="Sami Davies" title="Sami Davies" src="/assets/headshot_subway.jpg" width="150"
-            height="50">
+        <img class="img-fluid d-block mx-auto" alt="Sami Davies" title="Sami Davies" src="/assets/theory-headshot.jpg" width="300"
+            height="100">
     </div>
     <address class="col-md ">
         <strong>Math Ph.D. Student</strong>
