--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@ layout: default
     <div class="col-md">
         <img class="img-fluid d-block mx-auto" alt="Sami Davies" title="Sami Davies" src="/assets/theory-headshot.jpg" width="300"
             height="100">
+        </div>
+        <address class="col-md ">
+            <strong>Post-doctoral researcher</strong>
+            <br>
+            <strong>University of Washington </strong>
+            <br>
+                daviess [at] uw.edu
+            </a>
+            <br>
+            <br>
+            <p style="color:red;">
+            I am not working this summer. If you contact me for review requests or to chat research, I'll likely ghost you &#128123;. Sorry! I'll be back online in October.</p>
+    
     </div>
-    <address class="col-md ">
-        <strong>Math Ph.D. Student</strong>
-        <br>
-        <strong>University of Washington </strong>
-        <br>
-        <a href="mailto:daviess@uw.edu">
-            daviess@uw.edu
-        </a>
-        <br>
-        <strong>Offices: PDL C-404 & CSE2 351</strong>
-    </address>
-</div>
-
-I'm a Ph.D. student at the University of Washington, where I work between the<a href="https://math.washington.edu">
-Department of Mathematics
-</a> and
-the
-<a href="http://theory.cs.washington.edu"> theory group</a>
- in the Allen School. I'm advised by
-<a href = "https://sites.math.washington.edu/~rothvoss/index.html"> Thomas Rothvoss</a>.
-
-<br>
-<br>
-Before coming to UW, I earned my B.S. from
-<a href="http://www.math.cmu.edu/index.php">
-Carnegie Mellon University
-</a>
-and then my M.S. from 
-<a href="https://www.math.uic.edu">
-the University of Illinois at Chicago</a>. 
-
+    I am a (soon to be) post-doctoral researcher in <a href = "https://www.ideal.northwestern.edu"> IDEAL</a> at Northwestern University.
+    In June, I graduated with my Ph.D. in math from the University of Washington, where I worked between the<a href="https://math.washington.edu">
+    Department of Mathematics
+    </a> and
+    the
+    <a href="http://theory.cs.washington.edu"> theory group</a>
+     in the Allen School. I was advised by
+    <a href = "https://sites.math.washington.edu/~rothvoss/index.html"> Thomas Rothvoss</a>.
+    
+    <br>
+    <br>
+    I earned my B.S. from
+    <a href="http://www.math.cmu.edu/index.php">
+    Carnegie Mellon University
+    </a>
+    and my M.S. from 
+    <a href="https://www.math.uic.edu">
+    the University of Illinois at Chicago</a>. 
 
 <h3 style="color:Indigo;">News</h3>
 
