--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <address class="col-md ">
             <strong>Post-doctoral researcher</strong>
             <br>
-            <strong>University of Washington </strong>
+            <strong>Northwestern University</strong>
             <br>
                 daviess [at] uw.edu
             </a>
