--- a/index.html
+++ b/index.html
@@ -11,25 +11,31 @@ layout: default
             <br>
             <strong>Northwestern University</strong>
             <br>
-                daviess [at] uw.edu
+            <br>
+                sami [at] northwestern.edu
+                <br>
+                <font size="-2">...honestly, I don't trust my NU email yet, maybe use my gmail?</font>
+                <br>
+                sam.elli.davies [at] gmail.com 
             </a>
             <br>
-            <br>
+            <!-- <br>
             <p style="color:red;">
-            I am not working this summer. If you contact me for review requests or to chat research, I'll likely ghost you &#128123;. Sorry! I'll be back online in October.</p>
+            I am not working this summer. If you contact me for review requests or to chat research, I'll likely ghost you &#128123;. Sorry! I'll be back online in October.</p> -->
     
     </div>
-    I am a (soon to be) post-doctoral researcher in <a href = "https://www.ideal.northwestern.edu"> IDEAL</a> at Northwestern University.
-    In June, I graduated with my Ph.D. in math from the University of Washington, where I worked between the<a href="https://math.washington.edu">
+    I am a post-doctoral researcher in Theoretical Computer Science at Northwestern University. When I'm not in Evanston, I am working from Seattle. 
+    I am a member of the 2021 class of CIFellows. 
+    Broadly speaking, I like problems in combinatorial optimization, think hypergraph matchings, coloring, and scheduling stuff. 
+    <br>
+    <br>
+    In June 2021, I graduated with my Ph.D. in math from the University of Washington, where I worked between the<a href="https://math.washington.edu">
     Department of Mathematics
     </a> and
     the
     <a href="http://theory.cs.washington.edu"> theory group</a>
      in the Allen School. I was advised by
     <a href = "https://sites.math.washington.edu/~rothvoss/index.html"> Thomas Rothvoss</a>.
-    
-    <br>
-    <br>
     I earned my B.S. from
     <a href="http://www.math.cmu.edu/index.php">
     Carnegie Mellon University
