new paper and SODA entry

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
     {% endif %} {% endfor %}
 </section>
 
-<h3 style="color:Indigo;">Current Research</h3>
+<!-- <h3 style="color:Indigo;">Current Research</h3>
 <section id="research">
     {% for post in site.posts %} {% if post.research == true %}
     <div class="news-item">
@@ -64,7 +64,7 @@ layout: default
         <div class="content"> {{ post.content }} </div>
     </div>
     {% endif %} {% endfor %}
-<section>
+<section> -->
 
 <h3 style="color:Indigo;">Papers</h3>
 <section id="papers">
