--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <address class="col-md ">
             <strong>Post-doctoral researcher</strong>
             <br>
-            <strong>Northwestern University</strong>
+            <strong>University of Maryland, College Park</strong>
             <br>
             <br>
                 sami [at] northwestern.edu
