--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@ layout: default
 ---
 <div class="row align-items-center mt-3 mb-4 ">
     <div class="col-md">
-        <img class="img-fluid d-block mx-auto" alt="Sami Davies" title="Sami Davies" src="/assets/theory-headshot.jpg" width="220"
+        <img class="img-fluid d-block mx-auto" alt="Sami Davies" title="Sami Davies" src="/assets/" width="220"
             height="100">
         </div>
         <address class="col-md ">
-            <strong>Post-doctoral researcher</strong>
+            <strong>PhD Student</strong>
             <br>
             <strong>University of Maryland, College Park</strong>
             <br>
             <br>
-                sami [at] northwestern.edu
+                sduppala [at] umd.edu
                 <br>
-                sam.elli.davies [at] gmail.com 
+                sduppala [at] cs.umd.edu 
             </a>
             <br>
             <!-- <br>
@@ -22,12 +22,10 @@ layout: default
             I am not working this summer. If you contact me for review requests or to chat research, I'll likely ghost you &#128123;. Sorry! I'll be back online in October.</p> -->
     
     </div>
-    I am a post-doctoral researcher in Theoretical Computer Science at Northwestern University. When I'm not in Evanston, I am working from Seattle. 
-    I am a member of the 2021 class of CIFellows. 
-    Broadly speaking, I like problems in combinatorial optimization, think hypergraph matchings, coloring, and scheduling stuff. 
+    I am a Ph.D. student in the Computer Science department at the University of Maryland, College Park, where I am fortunate to be advised by Prof. John Dickerson and Prof. Aravind Srinivasn. My research focuses on Online Algorithms and fairness in Combinatorial Optimization. Broadly speaking, I like problems in combinatorial optimization, think hypergraph matchings, online matching, and clustering. 
     <br>
     <br>
-    In June 2021, I graduated with my Ph.D. in math from the University of Washington, where I worked between the<a href="https://math.washington.edu">
+    In June 2021, I graduated with my Ph.D. in math from the University of Washington, where I worked between the<a href="https://cs.umd.edu">
     Department of Mathematics
     </a> and
     the
