--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row align-items-center mt-3 mb-4 ">
     <div class="col-md">
-        <img class="img-fluid d-block mx-auto" alt="Sami Davies" title="Sami Davies" src="/assets/" width="220"
+        <img class="img-fluid d-block mx-auto" alt="Sharmila Duppala" title="Sharmila Duppala" src="/assets/" width="220"
             height="100">
         </div>
         <address class="col-md ">
@@ -17,22 +17,20 @@ layout: default
                 sduppala [at] cs.umd.edu 
             </a>
             <br>
-            <!-- <br>
+            <br>
             <p style="color:red;">
-            I am not working this summer. If you contact me for review requests or to chat research, I'll likely ghost you &#128123;. Sorry! I'll be back online in October.</p> -->
     
     </div>
-    I am a Ph.D. student in the Computer Science department at the University of Maryland, College Park, where I am fortunate to be advised by Prof. John Dickerson and Prof. Aravind Srinivasn. My research focuses on Online Algorithms and fairness in Combinatorial Optimization. Broadly speaking, I like problems in combinatorial optimization, think hypergraph matchings, online matching, and clustering. 
+    I am a Ph.D. student in the  <a href="https://www.cs.umd.edu">
+    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be advised by <a href="http://jpdickerson.com/"> Prof. John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Prof. Aravind Srinivasan </a>. My research focuses on Online Algorithms and fairness in Combinatorial Optimization. Broadly speaking, I like problems in combinatorial optimization, think hypergraph matchings, online matching, and clustering. 
     <br>
     <br>
-    In June 2021, I graduated with my Ph.D. in math from the University of Washington, where I worked between the<a href="https://cs.umd.edu">
-    Department of Mathematics
     </a> and
     the
-    <a href="http://theory.cs.washington.edu"> theory group</a>
+    <a href="http://.cs.umd.edu"> theory group</a>
      in the Allen School. I was advised by
     <a href = "https://sites.math.washington.edu/~rothvoss/index.html"> Thomas Rothvoss</a>.
-    I earned my B.S. from
+    I earned my B.Tech. from
     <a href="http://www.math.cmu.edu/index.php">
     Carnegie Mellon University
     </a>
