--- a/index.html
+++ b/index.html
@@ -22,21 +22,10 @@ layout: default
     
     </div>
     I am a Ph.D. student in the  <a href="https://www.cs.umd.edu">
-    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be advised by <a href="http://jpdickerson.com/"> Prof. John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Prof. Aravind Srinivasan </a>. My research focuses on Online Algorithms and fairness in Combinatorial Optimization. Broadly speaking, I like problems in combinatorial optimization, think hypergraph matchings, online matching, and clustering. 
+    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be advised by <a href="http://jpdickerson.com/"> Prof. John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Prof. Aravind Srinivasan </a>. My research focuses on online algorithms and fairness in combinatorial optimization problems.  
     <br>
     <br>
-    </a> and
-    the
-    <a href="http://.cs.umd.edu"> theory group</a>
-     in the Allen School. I was advised by
-    <a href = "https://sites.math.washington.edu/~rothvoss/index.html"> Thomas Rothvoss</a>.
-    I earned my B.Tech. from
-    <a href="http://www.math.cmu.edu/index.php">
-    Carnegie Mellon University
-    </a>
-    and my M.S. from 
-    <a href="https://www.math.uic.edu">
-    the University of Illinois at Chicago</a>. 
+    </a> I obtained my Masters in Computer Science from Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My  <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on reusable resource-allocation prolem. 
 
 <h3 style="color:Indigo;">News</h3>
 
