added some text to about

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
     Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be advised by <a href="http://jpdickerson.com/"> Prof. John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Prof. Aravind Srinivasan </a>. My research focuses on online algorithms and fairness in combinatorial optimization problems.  
     <br>
     <br>
-    </a> I obtained my Masters in Computer Science from Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My  <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on reusable resource-allocation prolem. 
+    </a> I obtained my Masters in <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> from Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My  <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on reusable resource-allocation prolem. 
 
 <h3 style="color:Indigo;">News</h3>
 
