updated agenda research

--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@ layout: default
     
     </div>
     I am a Ph.D. student in the  <a href="https://www.cs.umd.edu">
-    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be advised by <a href="http://jpdickerson.com/"> Prof. John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Prof. Aravind Srinivasan </a>.My research interests broadly focuses two directions : (1) Algorithms for online stochastic matching models 
-    I am  interested in design and competitive analysis of algorithms under different online stochastic settings like KIID (Known IID distribution arrivals) and Random Order Arrivals. 
-(2) Algorithmic fairness in combinatorial optimization. 
+    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be co-advised by professors <a href="http://jpdickerson.com/"> John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Aravind Srinivasan </a>. Priot to that, I was at the <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> department in Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My  <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on . <i> reusable resource-allocation prolem  </i>.
+
+    <br>
+    <br>
+ My current research spans Randomized Algorithms, Probabilistic Models and Fairness and broadly focuses two directions : <br> 
+    (1) Algorithms for online stochastic matching models: 
+    I am  interested in design and competitive analysis of algorithms under different online stochastic settings like KIID (Known IID distribution arrivals) and Random Order Arrivals.  <br>
+    (2) Algorithmic fairness in combinatorial optimization: 
     I am interested in understanding the algorithmic challenges of incorporating "acceptable" and "meaningful" notions of fairness into stochastic and combinatorial optimization problems arising in ride-sharing, internet advertising, crowdsourcing markets, kidney-exchange markets, etc.  Further, I am interested in understanding the merits and limitations of the fairness criteria in  providing solutions to the underlying optimization problem. 
-My current research therefore spans Randomized Algorithms, Probabilistic Models and Fairness.
     <br>
     <br>
-    </a> Before that, I obtained my Masters in <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> from Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My  <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on reusable resource-allocation prolem. 
+    </a> 
 
 <h3 style="color:Indigo;">News</h3>
 
