organized research agenda

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@ layout: default
     
     </div>
     I am a Ph.D. student in the  <a href="https://www.cs.umd.edu">
-    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be co-advised by professors <a href="http://jpdickerson.com/"> John Dickerson </a> and <a href="https://www.cs.umd.edu/~srin/"> Aravind Srinivasan </a>. Priot to that, I was at the <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> department in Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My  <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on . <i> reusable resource-allocation prolem  </i>.
+    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be co-advised by professors  <a href="https://www.cs.umd.edu/~srin/">Aravind Srinivasan</a> and <a href="http://jpdickerson.com/">John Dickerson</a>. Prior to that, I was at the <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> department in Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on <i>reusable resource-allocation problem</i>.
 
     <br>
     <br>
- My current research spans Randomized Algorithms, Probabilistic Models and Fairness and broadly focuses two directions : <br> 
-    (1) Algorithms for online stochastic matching models: 
-    I am  interested in design and competitive analysis of algorithms under different online stochastic settings like KIID (Known IID distribution arrivals) and Random Order Arrivals.  <br>
-    (2) Algorithmic fairness in combinatorial optimization: 
-    I am interested in understanding the algorithmic challenges of incorporating "acceptable" and "meaningful" notions of fairness into stochastic and combinatorial optimization problems arising in ride-sharing, internet advertising, crowdsourcing markets, kidney-exchange markets, etc.  Further, I am interested in understanding the merits and limitations of the fairness criteria in  providing solutions to the underlying optimization problem. 
+ My current research spans Randomized Algorithms, Probabilistic Models and Fairness. My interests broadly focus in two directions : <br> 
+    <b>(1) Algorithms for online stochastic matching models:</b> 
+    Specifically, design and competitive analysis of algorithms under different online stochastic settings like <i>KIID (Known IID distribution arrivals)</i> and <i>Random Order Arrivals</i>.<br>
+    <b>(2) Algorithmic fairness in combinatorial optimization:</b>
+    Understanding the algorithmic challenges of incorporating "acceptable" and "meaningful" notions of fairness into stochastic and combinatorial optimization problems arising in ride-sharing, internet advertising, crowdsourcing markets, kidney-exchange markets, etc.  Further, I am interested in understanding the merits and limitations of the fairness criteria in providing solutions to the underlying optimization problem. 
     <br>
     <br>
     </a> 
