added the changes again

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
     
     </div>
     I am a Ph.D. student in the  <a href="https://www.cs.umd.edu">
-    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be co-advised by professors  <a href="https://www.cs.umd.edu/~srin/">Aravind Srinivasan</a> and <a href="http://jpdickerson.com/">John Dickerson</a>. Prior to that, I was at the <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> department in Stony Brook University where I was advised by Prof. Rezaul Chowdhury. My <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on <i>reusable resource-allocation problem</i>.
+    Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be co-advised by professors  <a href="https://www.cs.umd.edu/~srin/">Aravind Srinivasan</a> and <a href="http://jpdickerson.com/">John Dickerson</a>. Prior to that, I was at the <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> department in Stony Brook University where I was very lucky to be advised by Prof. Rezaul Chowdhury. My <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on <i>reusable resource-allocation problem</i>.
 
     <br>
     <br>
