--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@ layout: default
             <p style="color:red;">
     
     </div>
-    I am a Ph.D. student in the  <a href="https://www.cs.umd.edu">
+    I am a Ph.D. Candidate in the  <a href="https://www.cs.umd.edu">
     Computer Science </a> department  at the University of Maryland, College Park, where I am fortunate to be co-advised by professors  <a href="https://www.cs.umd.edu/~srin/">Aravind Srinivasan</a> and <a href="http://jpdickerson.com/">John P. Dickerson</a>. Prior to that, I was a Graduate Research Assistant at the <a href="https://www.cs.stonybrook.edu/"> Computer Science </a> department in Stony Brook University where I was very lucky to be advised by <a href="https://www3.cs.stonybrook.edu/~rezaul/"> Prof. Rezaul Chowdhury </a> and my Masters <a href="https://www.proquest.com/docview/2321010389?pq-origsite=gscholar&fromopenview=true"> thesis </a> was focussed on <i>reusable resource-allocation problem</i>.
 
     <br>
-    <br>
- My current research spans Randomized Algorithms, Probabilistic Models and Fairness. My interests broadly focus in two directions : <br> 
-    <b>(1) Algorithms for online stochastic matching models:</b> 
-    Specifically, design and competitive analysis of algorithms under different online stochastic settings like <i>KIID (Known IID distribution arrivals)</i> and <i>Random Order Arrivals</i>.<br>
-    <b>(2) Algorithmic fairness in combinatorial optimization:</b>
-    Understanding the algorithmic challenges of incorporating "acceptable" and "meaningful" notions of fairness into stochastic and combinatorial optimization problems arising in ride-sharing, internet advertising, crowdsourcing markets, kidney-exchange markets, etc.  Further, I am interested in understanding the merits and limitations of the fairness criteria in providing solutions to the underlying optimization problem. 
-    <br>
+    <br
+I am broadly interested in algorithmic fairness for combinatorial problems, particularly in the design and analysis of fair algorithms for a wide variety of classical problems like graph matching, set covering, set packing, and clustering. 
+My past research has focused on incorporating probabilistic generalizations of group and individual fairness fairness into combinatorial problems and designing algorithms with provable guarantees. 
+
+
+<br>
     <br>
     </a> 
 
