--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ My past research has focused on incorporating probabilistic generalizations of g
     {% endif %} {% endfor %}
 <section> -->
 
-<h3 style="color:Indigo;">Papers</h3>
+<h3 style="color:Indigo;">Publications</h3>
 <section id="papers">
         {% assign bibs-newest-first = site.bib | reverse %} 
         {% for paper in bibs-newest-first %}
